f calculateNextDuration